--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Solar Theme
-url: http://example.org
+url: http://blog.justinacker.com
 description: A stylish blog using the Solarized color palette
 
 permalink: /:year/:month/:day/:title/
