--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Ack-attack
+name: Junior Dev Thinking
 url: http://blog.justinacker.com
 description: Musings on technology, development and gaming by Justin Acker
 
