Remove title and description from main layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Junior Dev Thinking
-url: http://blog.justinacker.com
+url: http://www.justinacker.com
 description: Musings on technology, development and gaming by Justin Acker
 
 permalink: /:year/:month/:day/:title/
